[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-finance"
version = "0.1.0"
description = "Ze finance plugin — portfolio, transactions, spending, and data source ingestion"
requires-python = ">=3.11"
dependencies = [
    "ze-sdk",
    "ze-ingestion",
    "ze-trading212",
    "asyncpg==0.31.0",
    "httpx==0.28.1",
]

[tool.uv.sources]
ze-sdk        = { workspace = true }
ze-ingestion  = { workspace = true }
ze-trading212 = { workspace = true }

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.entry-points."ze.plugins"]
ze_finance = "ze_finance.plugin:FinancePlugin"

[tool.hatch.build.targets.wheel]
packages = ["ze_finance"]
