[project]
name = "ze-messenger"
version = "0.1.0"
description = "Cross-channel messenger agent for Ze — routes messages via ChannelRegistry."
requires-python = ">=3.12"
dependencies = [
    "ze-sdk",
    "ze-google",
    "ze-personal",
    "structlog>=24.4",
]

[tool.uv.sources]
ze-sdk      = { workspace = true }
ze-google   = { workspace = true }
ze-personal = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."ze.plugins"]
ze_messenger = "ze_messenger.plugin:MessengerPlugin"

[tool.hatch.build.targets.wheel]
packages = ["ze_messenger"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
