[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-news"
version = "0.1.0"
description = "Ze news package — extensible news sources, persistent article store, NewsAgent"
requires-python = ">=3.11"
dependencies = [
    "ze-sdk",
    "ze-components",
    "feedparser>=6.0",
    "httpx>=0.28",
    "fastapi>=0.115",
]

[tool.uv.sources]
ze-sdk = { workspace = true }
ze-components = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.entry-points."ze.plugins"]
ze_news = "ze_news.plugin:NewsPlugin"

[tool.hatch.build.targets.wheel]
packages = ["ze_news"]
