[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-news"
version = "0.1.0"
description = "Ze news package — extensible news sources, persistent article store, NewsAgent"
requires-python = ">=3.11"
dependencies = [
    "ze-sdk",
    "ze-components",
    "feedparser==6.0.12",
    "httpx==0.28.1",
    "fastapi==0.136.3",
]

[tool.uv.sources]
ze-sdk = { workspace = true }
ze-components = { workspace = true }

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.entry-points."ze.plugins"]
ze_news = "ze_news.plugin:NewsPlugin"

[tool.hatch.build.targets.wheel]
packages = ["ze_news"]
