[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-personal"
version = "0.1.0"
description = "Ze personal assistant domain layer — contacts, goals, workflow, persona"
requires-python = ">=3.11"
dependencies = [
    "ze-core",
    "ze-memory",
    "asyncpg>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "anyio[trio]>=4.7",
    "ruff>=0.8",
]

[tool.uv.sources]
ze-core   = { workspace = true }
ze-memory = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ze_personal"]
