[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-personal"
version = "0.1.0"
description = "Ze personal assistant domain layer — contacts, goals, workflow, persona"
requires-python = ">=3.11"
dependencies = [
    "ze-sdk",
    "ze-news",
    "ze-automation",
    "asyncpg>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "anyio[trio]>=4.7",
    "ruff>=0.8",
]

[tool.uv.sources]
ze-sdk = { workspace = true }
ze-news = { workspace = true }
ze-automation = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.entry-points."ze.plugins"]
ze_personal = "ze_personal.plugin:PersonalPlugin"

[tool.hatch.build.targets.wheel]
packages = ["ze_personal"]
