[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-personal"
version = "0.1.0"
description = "Ze personal assistant domain layer — persona, contacts, onboarding"
requires-python = ">=3.11"
dependencies = [
    "ze-sdk",
    "ze-news",
    "ze-automation",
    "ze-components",
    "ze-seed",
    "asyncpg==0.31.0",
    "fastapi==0.136.3",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "anyio[trio]==4.13.0",
    "httpx==0.28.1",
    "ruff==0.15.14",
]

[tool.uv.sources]
ze-sdk = { workspace = true }
ze-news = { workspace = true }
ze-automation = { workspace = true }
ze-components = { workspace = true }
ze-seed = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.entry-points."ze.plugins"]
ze_personal = "ze_personal.plugin:PersonalPlugin"

[tool.hatch.build.targets.wheel]
packages = ["ze_personal"]
